<resources>
    <string name="app_name">MyScrap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="google_map_key">AIzaSyCW2Xddd8CXZOQVB2nc3IB51AlImeNhQsM</string>
    <string name="login_screen_logo">loginScreen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="c_password">Current Password</string>
    <string name="n_password">New Password</string>
    <string name="login">Login</string>
    <string name="no_account">No account yet? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="forgot_password_hint">Enter the email  you used to sign up</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="search">Search</string>
    <string name="notification_content">notification</string>
    <string name="profile_content">profile</string>
    <string name="message_content">message</string>
    <string name="feeds">Feeds</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed_comment">Comment</string>
    <string name="feed_like">Like</string>
    <plurals name="likes_count">
        <item quantity="one">%d Like</item>
        <item quantity="other">%d Likes</item>
    </plurals>
    <plurals name="viewers_count">
        <item quantity="one">%d Visitor</item>
        <item quantity="other">%d Visitors</item>
    </plurals>
    <plurals name="comments_count">
        <item quantity="one">%d Comment</item>
        <item quantity="other">%d Comments</item>
    </plurals>
    <string name="title_activity_like">Likes</string>
    <string name="connect">ADD</string>
    <string name="remove">REMOVE</string>
    <string name="likes">Likes</string>
    <string name="title_activity_comment">Comments</string>
    <string name="trader">Trader</string>
    <string name="shakeViewLogo">shakeViewLogo</string>
    <string name="shake_your_hand_to_find_out_people">Looking for people</string>
    <string name="shake">Looking for online members</string>
    <string name="image">image</string>
    <string name="sign_in">Login</string>
    <string name="join">Sign Up</string>
    <string name="search_company">Search company</string>
    <string name="title_activity_map_view">Discover</string>
    <string name="title_activity_main_chat">Chat</string>
    <string name="title_activity_main_chat_room">Chats</string>
    <string name="user_reply_status">reply</string>
    <string name="active_now">Active Users</string>
    <string name="see_all">See All</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>
    <string name="delete">Delete</string>
    <string name="type_a_message_hint">Write a message…</string>
    <string name="action_send">Send</string>
    <string name="write_a_comment">Write a comment..</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="title_activity_status">Post to MyScrap</string>
    <string name="add_photos">Add Photo</string>
    <string name="post">Post</string>
    <string name="title_activity_news_view">News</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="position">Position</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="country">Country</string>
    <string name="bio">Bio</string>
    <string name="phone">Phone</string>
    <string name="country_code">Code</string>
    <string name="website">Website</string>
    <string name="title_activity_search_view">SearchViewActivity</string>
    <string name="send_code_again">Send Code Again</string>
    <string name="continue_caps">CONTINUE</string>
    <string name="edit_small">Edit</string>
    <string name="title_activity_single_notification">Notification</string>
    <string name="action_clear">Clear</string>
    <string name="UpdatedTitle"> New Update Available</string>
    <string name="UpdatedMessageOne"> MyScrap version  </string>
    <string name="UpdatedMessageTwo"> is now available on the Google Play Store.</string>
    <string name="update">UPDATE NOW</string>
    <string name="no_thanks">NO THANKS</string>
    <string name="chat">Chat</string>
    <string name="sort_by_name">By Name</string>
    <string name="title_activity_company_profile">Company</string>
    <string name="status">Write Post</string>
    <string name="photo">Share Photo</string>
    <string name="title_activity_interest">Interests</string>
    <string name="title_activity_company_interest">Company</string>
    <string name="title_activity_employee">Employees</string>
    <string name="title_activity_company_edit_profile">Company Edit Profile</string>
    <string name="title_activity_company_working_hours">Business Hours</string>
    <string name="hours">Hours</string>
    <string name="select_hours">Select Hours</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="split">-</string>
    <string name="add_set_of_hours">ADD SET OF HOURS</string>
    <string name="confirm">CONFIRM</string>
    <string name="next_caps">NEXT</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="opens_at">Opens at</string>
    <string name="closes_at">Closes at</string>
    <string name="title_activity_detailed_post">Details</string>
    <string name="disclaimer">The information contained in this platform is for general purposes only. Every effort is make to keep the platform up and running smoothly, however MyScrap takes no responsibility for and will not be liable for the platform being temporarily unavailable due to technical issues beyond our control.
MyScrap collect information with consent from the user information that is necessary to fulfill the purpose of smooth interaction. MyScrap is giving an assurance that the information will be protected, to do that MyScrap set up procedures to ensure that your information is handled responsibly in accordance with applicable data protection and privacy.
</string>
    <string name="title_activity_image_upload">Upload</string>
    <string name="title_activity_employee_request">Employee Request</string>
    <string name="edit_location">Edit Location</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="title_activity_company_update_marker_location">Update Location</string>
    <string name="dot">"&#160;&#8226;&#160;"</string>
    <string name="two_spaces">"&#160;&#160;"</string>
    <string name="like">LIKE</string>
    <string name="comment">COMMENT</string>
    <string name="show_map">[ show map ]</string>
    <string name="hide_map">[ hide map ]</string>
    <string name="online">&#160;&#160;&#8226;&#160;&#160; </string>
    <string name="shareContent">MyScrap is an application which helps leveraging your business and linking your profile to active users.\n\nMyScrap empowers users to strengthen recycling business all over the world to outreach effectively that has direct benefits building comprehensive marketing strategy as per clients business need.\n\nMyScrap is accessible, reliable and easy to download in Android/iOS/Web through internet connections without any hassle.\n\nGet it now from https://myscrap.com/login</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_tips"></string>
    <string name="title_activity_privacy"> Privacy Policy</string>
    <string name="title_activity_terms">Terms and Conditions</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="new_user"> &#160;NEW&#160;</string>
    <string name="mod"> &#160;MOD&#160;</string>
    <string name="reported_post_content">This post is reported to the moderator</string>
    <string name="myscrap_won_t_tell_they_were_removed_from_your_employers">MyScrap won\'t tell, they were removed from your employers.</string>
</resources>