<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:background="@color/white">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_margin" android:layout_marginRight="@dimen/standard_margin"
        tools:ignore="UselessParent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="1.0" android:baselineAligned="false" android:layout_centerInParent="true" android:orientation="horizontal" tools:ignore="UselessParent">
            <LinearLayout android:id="@+id/hours_layout" android:layout_width="match_parent"  android:orientation="vertical" android:layout_height="wrap_content" tools:ignore="UselessParent">
                <TextView android:id="@+id/hours" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="@dimen/text_padding" android:text="@string/hours" android:textColor="@color/secondaryText" android:textSize="@dimen/normal_text_size" />
                <RelativeLayout android:layout_width="match_parent" android:padding="@dimen/text_padding" android:layout_height="wrap_content">
                    <TextView android:id="@+id/week_days" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="@dimen/text_padding" android:background="@drawable/ripple_empty_bg" android:text="@string/select_hours" android:textColor="@color/black" android:textSize="@dimen/next_to_normal_text_view" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_toLeftOf="@+id/cancel_date" android:layout_toStartOf="@+id/cancel_date" />
                    <ImageView android:id="@+id/cancel_date" android:contentDescription="@string/image" android:src="@drawable/close_image" android:background="@drawable/ripple_empty_bg" android:layout_width="@dimen/status_privacy" android:layout_height="@dimen/status_privacy" android:layout_marginRight="@dimen/company_working_hours_cancel_date_margin" android:layout_marginEnd="@dimen/company_working_hours_cancel_date_margin" android:layout_centerVertical="true" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" />
                </RelativeLayout>
                <View android:layout_width="match_parent" android:background="@android:color/darker_gray" android:layout_height="0.5dp" />
                <LinearLayout android:layout_width="match_parent" android:id="@+id/open_close_layout" android:padding="5dp" android:layout_height="wrap_content" android:orientation="horizontal">
                    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:layout_marginEnd="5dp" android:orientation="vertical">
                        <TextView android:id="@+id/open_days_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="@dimen/text_padding" android:background="@drawable/ripple_empty_bg" android:text="@string/open" android:textColor="@color/black" android:textSize="@dimen/next_to_normal_text_view" />
                        <View android:layout_width="match_parent" android:background="@android:color/darker_gray" android:layout_marginTop="5dp" android:layout_height="0.5dp" />
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="@dimen/text_padding" android:text="@string/split" android:gravity="center_horizontal|center_vertical" android:textColor="@color/secondaryText" android:textSize="@dimen/large_text_view" />
                    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">
                        <TextView android:id="@+id/close_days_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="@dimen/text_padding" android:background="@drawable/ripple_empty_bg" android:text="@string/close" android:textColor="@color/black" android:textSize="@dimen/next_to_normal_text_view" />
                        <View android:layout_width="match_parent" android:background="@android:color/darker_gray" android:layout_marginTop="5dp"  android:layout_height="0.5dp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal" android:layout_marginTop="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:id="@+id/add_set_of_hours_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="@dimen/text_padding" android:background="@drawable/ripple_empty_bg" android:text="@string/add_set_of_hours" android:textColor="@color/colorPrimary" android:textSize="@dimen/next_to_normal_text_view" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>