<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.myscrap.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_screen_margin"
        android:layout_marginRight="@dimen/login_screen_margin">

        <ImageView
            android:id="@+id/login_screen_logo"
            android:contentDescription="@string/login_screen_logo"
            android:src="@drawable/login_screen_logo"
            android:layout_width="@dimen/login_screen_logo"
            android:layout_height="@dimen/login_screen_logo"
            android:layout_gravity="center_horizontal" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_from_login_logo"
            android:layout_marginBottom="@dimen/text_input_layout_margin">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/text_input_layout_margin"
            android:layout_marginBottom="@dimen/text_input_layout_margin">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_login_margin"
            android:layout_marginBottom="@dimen/btn_login_margin"
            android:background="@drawable/login_button_style"
            android:padding="@dimen/btn_login_padding"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/login"/>


        <TextView
            android:id="@+id/take_a_look"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Guest User"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal"
            android:visibility="visible"
            android:layout_marginBottom="@dimen/text_input_layout_margin"
            android:textSize="@dimen/large_text_view"/>


        <TextView android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="@dimen/text_input_layout_margin"
            android:textSize="@dimen/large_text_view"/>

        <TextView android:id="@+id/link_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/no_account"
            android:gravity="center"
            android:layout_marginTop="@dimen/text_input_layout_margin"
            android:layout_marginBottom="@dimen/text_input_layout_margin"
            android:textSize="@dimen/large_text_view"/>
    </LinearLayout>
</ScrollView>
