<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.myscrap.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_screen_margin"
            android:layout_marginRight="@dimen/login_screen_margin">

            <ImageView
                android:id="@+id/login_screen_logo"
                android:contentDescription="@string/login_screen_logo"
                android:src="@drawable/login_screen_logo"
                android:layout_width="@dimen/login_screen_logo"
                android:layout_height="@dimen/login_screen_logo"
                android:layout_gravity="center_horizontal" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_from_login_logo"
                android:weightSum="1">
                <!-- First Name Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <EditText android:id="@+id/input_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/first_name" />
                </android.support.design.widget.TextInputLayout>

                <!-- Last Name Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <EditText android:id="@+id/input_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/last_name" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_layout_margin"
                android:layout_marginBottom="@dimen/text_input_layout_margin">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/text_input_layout_margin"
                android:layout_marginBottom="@dimen/text_input_layout_margin">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_login_margin"
                android:layout_marginBottom="@dimen/btn_login_margin"
                android:background="@drawable/login_button_style"
                android:padding="@dimen/btn_login_padding"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/sign_up"/>


            <TextView android:id="@+id/link_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/already_have_account"
                android:gravity="center"
                android:layout_marginTop="@dimen/text_input_layout_margin"
                android:layout_marginBottom="@dimen/text_input_layout_margin"
                android:textSize="@dimen/large_text_view"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
