<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.myscrap.ForgotPasswordActivity"
    tools:showIn="@layout/activity_forgot_password">

    <LinearLayout
        android:layout_marginTop="@dimen/btn_login_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_screen_margin"
        android:layout_marginRight="@dimen/login_screen_margin"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_hint"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/btn_login_margin"
            android:layout_marginBottom="@dimen/btn_login_margin"
            android:textSize="@dimen/xx_large_text_view"/>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_layout_margin"
            android:layout_marginBottom="@dimen/text_input_layout_margin">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/btn_login_margin"
            android:layout_marginTop="@dimen/btn_login_margin"
            android:background="@drawable/login_button_style"
            android:padding="@dimen/btn_login_padding"
            android:text="@string/reset_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
