<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:orientation="vertical" android:layout_height="wrap_content"  android:background="@color/fb_view_bg" android:clickable="true">

    <LinearLayout android:layout_width="match_parent" android:background="@color/white" android:layout_marginTop="16dp" android:layout_height="wrap_content" android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent"  android:layout_height="@dimen/header_avatar_image_size"  android:layout_marginTop="@dimen/fragment_feeds_header_margin" android:layout_marginBottom="@dimen/fragment_feeds_header_margin" android:background="@color/white">
    <ImageView android:id="@+id/user_post_profile" android:background="@drawable/ripple_empty_bg" android:contentDescription="@string/image" android:layout_marginLeft="@dimen/fragment_feeds_header_margin" android:layout_marginRight="@dimen/fragment_feeds_header_margin"  android:layout_width="@dimen/header_avatar_image_size" android:layout_height="@dimen/header_avatar_image_size"  android:scaleType="centerCrop"  android:padding="1dp"/>
    <RelativeLayout android:id="@+id/post" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_centerVertical="true" android:layout_toRightOf="@+id/user_post_profile" android:layout_toEndOf="@+id/user_post_profile">
        <TextView  android:enabled="true"  android:background="@color/transparent" android:textStyle="normal"   android:textColor="@color/secondaryText"  android:textSize="@dimen/normal_text_size" android:gravity="start|center"  android:id="@+id/status_edit_box" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" />
    </RelativeLayout>
 </RelativeLayout>
 <View  style="@style/DividerStyleLight"/>
    <LinearLayout android:baselineAligned="false" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" >
        <RelativeLayout  android:padding="@dimen/fragment_feeds_inner_margin_top_bottom" android:background="@drawable/ripple_empty_bg" android:layout_marginLeft="@dimen/fragment_feeds_inner_margin_left_right" android:layout_marginRight="@dimen/fragment_feeds_inner_margin_left_right"  android:orientation="horizontal" android:gravity="center_horizontal" android:clickable="true" android:id="@+id/status_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.5">
            <ImageView android:id="@+id/header_edit"  android:contentDescription="@string/image" android:layout_width="@dimen/status_privacy" android:layout_height="@dimen/status_privacy"  android:clickable="true" android:padding="@dimen/fragment_feeds_inner_margin_top_bottom" android:scaleType="centerCrop" android:tint="@color/secondaryText" android:src="@drawable/edit" />
            <TextView   android:id="@+id/status_layout_text_view"    android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/status" android:textSize="@dimen/medium_text_size" android:textColor="@color/secondaryText" android:layout_centerVertical="true" android:textStyle="bold" android:gravity="start"  android:layout_toRightOf="@+id/header_edit" android:layout_toEndOf="@+id/header_edit"/>
        </RelativeLayout>
        <RelativeLayout android:padding="@dimen/fragment_feeds_inner_margin_top_bottom" android:background="@drawable/ripple_empty_bg" android:layout_marginLeft="@dimen/fragment_feeds_inner_margin_left_right" android:layout_marginRight="@dimen/fragment_feeds_inner_margin_left_right"   android:orientation="horizontal" android:gravity="center_horizontal" android:clickable="true" android:id="@+id/camera_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.5">
            <ImageView android:id="@+id/header_camera"  android:contentDescription="@string/image"   android:layout_width="@dimen/status_privacy" android:layout_height="@dimen/status_privacy"  android:clickable="true" android:padding="@dimen/fragment_feeds_inner_margin_top_bottom" android:scaleType="centerCrop" android:tint="@color/secondaryText" android:src="@drawable/camera" />
            <TextView   android:id="@+id/camera_layout_text_view"   android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content"   android:text="@string/photo" android:textSize="@dimen/medium_text_size" android:textColor="@color/secondaryText" android:layout_centerVertical="true" android:textStyle="bold" android:gravity="start"  android:layout_toRightOf="@+id/header_camera" android:layout_toEndOf="@+id/header_camera" />
        </RelativeLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>